--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>se.michaelthelin.spotify</groupId>
+            <artifactId>spotify-web-api-java</artifactId>
+            <version>6.5.1</version>
+        </dependency>
     </dependencies>
     
     <build>
