--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -122,6 +122,79 @@ updatealerts=true
 
 lyrics.default = "A-Z Lyrics"
 
+lyrics
+{
+    default = "A-Z Lyrics"
+    timeout = 5000
+    user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:63.0) Gecko/20100101 Firefox/63.0"
+
+    A-Z Lyrics
+    {
+        search
+        {
+            url = "https://search.azlyrics.com/search.php?q=%s"
+            json = false
+            select = "a[href*=/lyrics/]"
+        }
+        parse
+        {
+            title = "div.ringtone ~ b"
+            author = "div.lyricsh b"
+            content = "div.ringtone ~ div"
+        }
+    }
+
+    Genius
+    {
+        search
+        {
+            url = "https://genius.com/api/search?q=%s"
+            json = true
+            select = "result > url"
+        }
+        parse
+        {
+            title = "h1.header_with_cover_art-primary_info-title"
+            author = "a.header_with_cover_art-primary_info-primary_artist"
+            content = "div.lyrics p"
+        }
+    }
+
+    MusixMatch
+    {
+        search
+        {
+            url = "https://www.musixmatch.com/search/%s"
+            json = false
+            select = "a.title[href*=/lyrics/]"
+        }
+        parse
+        {
+            title = "h1"
+            author = "h2 span a"
+            content = "div.mxm-lyrics > span"
+        }
+    }
+
+    MusicMatch = ${lyrics.MusixMatch}
+
+    LyricsFreak
+    {
+        search
+        {
+            url = "https://www.lyricsfreak.com/search.php?q=%s"
+            json = false
+            select = "a.song[href*=.html]"
+        }
+        parse
+        {
+            title = "div#breadcrumb span > span[itemprop=title]"
+            author = "h2.lyric-song-head a"
+            content = "div#content"
+        }
+    }
+}
+
 
 // These settings allow you to configure custom aliases for all commands.
 // Multiple aliases may be given, separated by commas.
